GNOME Bugzilla – Bug 769800
cogl: Fix a few GISCAN warnings
Last modified: 2016-08-18 03:36:37 UTC
This makes my current compiler warnings I get when building mutter go away.
Created attachment 333181 [details] [review] cogl: Fix a few GISCAN warnings We tried to resolve non-introspected types; lets skip those. We didn't have a vfunc scope on a for-each loop; declared it synchronous.
Review of attachment 333181 [details] [review]: looks fine
Attachment 333181 [details] pushed as c55943d - cogl: Fix a few GISCAN warnings